<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Merka Pues</string>
    <string name="correo">Correo Electrónico</string>
    <string name="contrasena">Contraseña</string>
    <string name="iniciar">Iniciar Sesión</string>
    <string name="registrar">Registrese</string>
    <string name="repContrasena">Repetir Contraseña</string>
    <string name="bregistrar">Registrar</string>
    <string name="perfil">Mi Perfil</string>
    <string name="mCerrar">Cerrar Sesión</string>
    <string name="main">Principal</string>

    <string name="facebook_app_id">471513346565435</string>
    <string name="fb_login_protocol_scheme">fb471513346565435</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Lista">Lista</string>
    <string name="cambiar">Cambiar Frame</string>
    <string name="user">Nombre</string>
    <string name="title_activity_base2">Base2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="promo">Promociones</string>
    <string name="listas">Mis Listas</string>
    <string name="carrito">Carrito de Compras</string>
    <string name="title_activity_promo">PromoActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_carrito">CarritoActivity</string>
    <string name="title_activity_listas">ListasActivity</string>
    <string name="title_activity_ofertas">OfertasActivity</string>
    <string name="title_activity_cars_shop">CarsShopActivity</string>
    <string name="but_car">Mi Carrito</string>
    <string name="but_compras">Mis Compras</string>
    <string name="t_user">Nombre de Usuario:</string>
    <string name="t_email">Correo Electrónico:</string>
    <string name="title_activity_menu_drawer">MenuDrawerActivity</string>
    <string name="cerca">Tiendas Cercanas</string>
    <string name="title_activity_maps">Map</string>
    <string name="acceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="name">Por Favor ingrese el nombre de la lista:</string>
    <string name="hitname">Nombre de la lista</string>
    <string name="newList">Nueva Lista</string>
    <string name="add">Agregar</string>
    <string name="nbar">Buscar Producto</string>
    <string name="app_label">Buscar Producto</string>
    <string name="scan">Scan Bar Code</string>

</resources>
